--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to My Updated Website</h1>
     </header>
     
     <nav>
